# machina

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  machina.cpp  machina.h  main.cpp  vcpkg-configuration.json  vcpkg.json
assets/blend/: s1.blend  s2.blend
assets/models/: suzanne.glb  suzannes.glb
assets/scenes/: sphere-glossy.usda  sphere.usda  suzannes.usda
assets/scenes/suzannes/: Untitled.usda  Untitled2.usda  Untitled3.usda
assets/web/: poc.html
cmake/: CopyNvidiaUsdRuntime.cmake  DownloadNvidiaUsd.cmake  MakeDistribution.cmake  NvidiaUsd.cmake  download_nvidia_usd.cmake  nvidia_usd.cmake  ultralight.cmake
include/machina/: Ecs.hpp  LevelDescription.hpp  LevelInstantiator.hpp  MaterialXShaderGenerator.hpp  Renderer.hpp  UsdLevelLoader.hpp  ecs.hpp  level_description.hpp  level_instantiator.hpp  materialx_shader_generator.hpp  renderer.hpp  usd_level_loader.hpp  web_overlay.hpp
src/: LevelInstantiator.cpp  MaterialXShaderGenerator.cpp  Renderer.cpp  UsdLevelLoader.cpp  level_instantiator.cpp  main.cpp  materialx_shader_generator.cpp  renderer.cpp  usd_level_loader.cpp  web_overlay.cpp
tests/: level_smoke.cpp
